@@ -4,4 +4,4 @@ MessageFactory = MessageFactory('plone.formwidget.contenttree')
 from plone.formwidget.contenttree.widget import ContentTreeFieldWidget
 from plone.formwidget.contenttree.widget import MultiContentTreeFieldWidget
 
-from plone.formwidget.contenttree.source import PathSourceBinder, ObjPathSourceBinder
+from plone.formwidget.contenttree.source import PathSourceBinder, ObjPathSourceBinder, UUIDSourceBinder
