@@ -3,7 +3,7 @@
         <li tal:define="show_children       node/show_children;
                         children            node/children;
                         item_url            node/getURL;
-                        item_token          python:view.brain_to_term(node['item']).token;
+                        item_token          python:view.getTermByBrain(node['item']).token;
                         item_icon           node/item_icon;
                         selectable          node/selectable;
                         li_folder_class     python:show_children and ' navTreeFolderish' or '';
