@@ -15,7 +15,8 @@ class IContentFilter(Interface):
         """
 
 class IContentSource(IQuerySource):
-    """A source that can specify content
+    """A source that can specify content. The generated terms should have
+    tokens that are URLs to the content, since these are used to create links.
     """
 
     navigation_tree_query = Attribute("A dict to pass to portal_catalog when "
@@ -29,7 +30,15 @@ class IContentSource(IQuerySource):
 
     def isBrainSelectable(self, brain):
         """Return True iff the brain represents a page that can be selected
-        in the navigation tree
+        in the navigation tree. Base implementation should be sufficient
+        """
+
+    def getBrainByToken(self, token):
+        """Given a token, find the corresponding brain
+        """
+
+    def getTermByBrain(self, brain, real_value=True):
+        """Given a brain, generate a Term that represents this brain
         """
 
 class IContentTreeWidget(Interface):
